parser/sample_tests/ours/class.txt

*** Error line 5.
    Print ( this.height, " ", isSpotted, "\n" );
                ^
*** syntax error

